Bug 155437 - PDF export: incorrect gradient
Summary: PDF export: incorrect gradient
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Armin Le Grand (collabora)
URL:
Whiteboard: target:7.6.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: PDF-Export Object-Fill-Gradient
  Show dependency treegraph
 
Reported: 2023-05-22 15:03 UTC by Xisco Faulí
Modified: 2023-05-31 08:04 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
LibreOffice vs PDF (83.67 KB, image/png)
2023-05-22 15:03 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-05-22 15:03:36 UTC
Created attachment 187439 [details]
LibreOffice vs PDF

Steps to reproduce:
1. Open attachment 163290 [details] from bug 134968
2. Export to PDF

-> The gradient in the PDF is incorrect. See comparison

Reproduced in

Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 4a162c4cdc9fd95bdbeb6a71b9b7689f242c2906
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2023-05-22 15:04:25 UTC
Regression introduced by:

author	Armin Le Grand (allotropia) <armin.le.grand.extern@allotropia.de>	2023-04-21 15:18:09 +0200
committer	Armin Le Grand <Armin.Le.Grand@me.com>	2023-05-03 17:38:46 +0200
commit bb198176684c3d9377e26c04a29ec66deb811949 (patch)
tree 731abe7ce1b95805900f39c6c7ac2c1c6ccfb211
parent f1fd3e32508ee3e8aca6f90724e7af8664652e41 (diff)
MCGR: Make MCGR default for oox im/export, cleanup

Bisected with: bibisect-linux64-7.6

Adding Cc: to Armin Le Grand
Comment 2 Armin Le Grand (collabora) 2023-05-26 09:43:51 UTC
Taking a look...
Yes, confirmed. Probably due to the transp gradient in MSO being defined using two colorstops,
- 0.3, 100% trans
- 1.0, 0% trans
which we can now do with MCGR, but seems to need export PDF support. Have to check what exactly PDF export is doing here...
Comment 3 Armin Le Grand (collabora) 2023-05-26 10:13:15 UTC
NOTE: You can check this quickly by selecting all (CTRL+A) and converting to Metafile - that's what PDF export uses roughly
Comment 4 Armin Le Grand (collabora) 2023-05-30 13:25:41 UTC
should be fixed with https://gerrit.libreoffice.org/c/core/+/152392, see comments & explanations there.
Comment 5 Commit Notification 2023-05-31 07:59:40 UTC
Armin Le Grand (allotropia) committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f6c753cc0f42e94f89361b7d1c41dae069ed73aa

MCGR: tdf#155437 handling of TransparencePrimitive2D for metafiles

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.