MCGR: tdf#155437 handling of TransparencePrimitive2D for metafiles

In VclMetafileProcessor2D we need to take care of changed
circumstances for gradients with the MCGR adaptions. The
method processTransparencePrimitive2D tries to detect the
special case that the trapsparency part of the handled
TransparencePrimitive2D is a single TransparencyGradient.

If detected, this is handed directly to vcl using a
MetaFloatTransparentAction which contains a class
'Gradient', but the limited form from vcl (see
include/vcl/gradient.hxx). This class can only in very
limited scenarios directly handle/hold a gradient from
the model (even before MCGR).

For that case there is the helper method
'cannotBeHandledByVCL' that is already used to decide
if limited direct rendering using vcl can be used.
This has also be used here.

Also reworked the conversion to Bitmap as needed, the
existing versions created slight errors. For more
details see additional comments in the code.

Change-Id: If9af8b1423df5354eaf9ba8ca6243a1b3ad1b965
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152392
Tested-by: Jenkins
Reviewed-by: Armin Le Grand <Armin.Le.Grand@me.com>